Using NeoSans fonts

--- a/style/escolas_e_localizacao.css
+++ b/style/escolas_e_localizacao.css
@@ -21,3 +21,13 @@
 	background-color: grey;
 	margin-bottom: 15px;
 }
+
+.panel-title {
+	font-family: NeoSansMedium;
+	font-style: italic;
+}
+
+.unit-title {
+	font-family: NeoSansMedium;
+	font-style: italic;
+}
