--- a/style/shared.css
+++ b/style/shared.css
@@ -1,141 +1,233 @@
 /* For development purpose */
 /** {
 	outline: 1px solid red !important;
-	}*/
+}*/
 
-	html {
-		position: relative; /* Required for footer posiotining */
-		min-height: 100%; /* Required for footer posiotining */
+html {
+	position: relative; /* Required for footer posiotining */
+	min-height: 100%; /* Required for footer posiotining */
+}
+
+body {
+	/* Margin bottom by footer height */
+	margin-bottom: 325px; /* Required for footer posiotining */
+	font-family: NeoSans
+}
+
+div {
+	box-sizing: border-box;
+}
+
+.container {
+	max-width: 900px;
+}
+
+.flex-wrap {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.logo {
+	height: 100px;
+}
+
+.header-title-box {
+	text-align: right;
+	margin-left: auto;
+}
+
+.cultivar-fonte-img {
+	max-width: 230px;
+	margin-top: 15px;
+}
+
+.escola-de-idiomas-text {
+	margin-top: 0;
+	margin-right: 25px;
+	font-style: italic;
+	color: #858383;
+}
+
+.navbar {
+	margin-bottom: 0;
+}
+
+@media screen and (max-width: 991px) {
+	.font-resizeable-nav-bar {
+		font-size: 0.89em;
+	}
+}
+
+.page-footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	/* Set the fixed height of the footer here */
+	height: 325px;
+	background-color: #fff;
+}
+
+/*
+@media screen and (max-width: 991px) {
+	.page-footer {
+		display: none;
 	}
 
 	body {
-		/* Margin bottom by footer height */
-		margin-bottom: 325px; /* Required for footer posiotining */
+		 Margin bottom by footer height 
+		margin-bottom: 0; /* Required for footer posiotining *//*
 	}
+}
+*/
 
-	div {
-		box-sizing: border-box;
-	}
+.footer-social-networks-box {
+	text-align: center;
+	padding: 5px;
+}
 
-	.container {
-		max-width: 900px;
-	}
+.no-underline-link {
+	text-decoration: none !important;
+}
 
-	.flex-wrap {
-		display: flex;
-		flex-wrap: wrap;
-	}
+.social-network-icon-img {
+	width: 48px;
+	color: #635e5a;
+}
 
-	.logo {
-		height: 100px;
-	}
+.footer-social-content-line {
+	margin-top: 0;
+	margin-bottom: 10px;
+}
 
-	.header-title-box {
-		text-align: right;
-		margin-left: auto;
-	}
+.footer-vcenter {
+	display: inline-block;
+	vertical-align: middle;
+	float: none;
+}
 
-	.cultivar-fonte-img {
-		max-width: 230px;
-		margin-top: 15px;
-	}
+.footer-tels-box {
+	margin: auto;
+	width: 200px;
+}
 
-	.escola-de-idiomas-text {
-		margin-top: 0;
-		margin-right: 25px;
-		font-style: italic;
-		color: #858383;
-	}
+.whatsapp-tel-text-box {
+	margin: auto 0;
+}
 
-	.navbar {
-		margin-bottom: 0;
-	}
+.whatsapp-tel-img-box {
+	margin: auto 0 auto 10px;
+}
 
-	@media screen and (max-width: 991px) {
-		.font-resizeable-nav-bar {
-			font-size: 0.89em;
-		}
-	}
+.footer-localization-img-box {
+	text-align: center;
+	margin-bottom: 10px;
+}
 
-	.page-footer {
-		position: absolute;
-		bottom: 0;
-		width: 100%;
-		/* Set the fixed height of the footer here */
-		height: 325px;
-		background-color: #fff;
-	}
+.footer-content-last-text-line {
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
 
-	/*
-	@media screen and (max-width: 991px) {
-		.page-footer {
-			display: none;
-		}
+.footer-last-text-box {
+	text-align: center;
+}
 
-		body {
-			 Margin bottom by footer height 
-			margin-bottom: 0; /* Required for footer posiotining *//*
-		}
-	}
-	*/
+.footer-map-img {
+	max-height: 150px;
+}
 
-	.footer-social-networks-box {
-		text-align: center;
-		padding: 5px;
-	}
+.course-img {
+	margin-bottom: 8px !important;
+	height:32px;
+}
 
-	.no-underline-link {
-		text-decoration: none !important;
-	}
+.blockquote-footer {
+	font-family: NeoSansLightItalic;
+	font-size: 18px;
+}
 
-	.social-network-icon-img {
-		width: 48px;
-		color: #635e5a;
-	}
+@font-face {
+    font-family: NeoSansMedium;
+    src: url(../fonts/NeoSansW1G-Medium.otf);
+}
 
-	.footer-social-content-line {
-		margin-top: 0;
-		margin-bottom: 10px;
-	}
+@font-face {
+    font-family: NeoSansMedium;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-MediumItalic.otf);
+}
 
-	.footer-vcenter {
-		display: inline-block;
-		vertical-align: middle;
-		float: none;
-	}
+@font-face {
+    font-family: NeoSansMediumItalic;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-MediumItalic.otf);
+}
 
-	.footer-tels-box {
-		margin: auto;
-		width: 200px;
-	}
+@font-face {
+    font-family: NeoSansLight;
+    src: url(../fonts/NeoSansW1G-Light.otf);
+}
 
-	.whatsapp-tel-text-box {
-		margin: auto 0;
-	}
+@font-face {
+    font-family: NeoSansLight;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-LightItalic.otf);
+}
 
-	.whatsapp-tel-img-box {
-		margin: auto 0 auto 10px;
-	}
+@font-face {
+    font-family: NeoSansLightItalic;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-LightItalic.otf);
+}
 
-	.footer-localization-img-box {
-		text-align: center;
-		margin-bottom: 10px;
-	}
+@font-face {
+    font-family: NeoSansUltra;
+    src: url(../fonts/NeoSansW1G-Ultra.otf);
+}
 
-	.footer-content-last-text-line {
-		margin-top: 5px;
-		margin-bottom: 10px;
-	}
+@font-face {
+    font-family: NeoSansUltra;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-UltraItalic.otf);
+}
 
-	.footer-last-text-box {
-		text-align: center;
-	}
+@font-face {
+    font-family: NeoSansBlack;
+    src: url(../fonts/NeoSansW1G-Black.otf);
+}
 
-	.footer-map-img {
-		max-height: 150px;
-	}
+@font-face {
+    font-family: NeoSansBlack;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-BlackItalic.otf);
+}
 
-	.course-img {
-		margin-bottom: 8px !important;
-		height:32px;
-	}
+@font-face {
+    font-family: NeoSans;
+    src: url(../fonts/NeoSansW1G.otf);
+}
+
+@font-face {
+    font-family: NeoSans;
+    font-weight: bold;
+    src: url(../fonts/NeoSansW1G-Bold.otf);
+}
+
+@font-face {
+    font-family: NeoSans;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-Italic.otf);
+}
+
+@font-face {
+    font-family: NeoSans;
+    font-weight: bold;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-BoldItalic.otf);
+}
+
+@font-face {
+    font-family: NeoSansItalic;
+    font-style: italic;
+    src: url(../fonts/NeoSansW1G-Italic.otf);
+}
